backend/auth/tests/functional/utils/errors/action/sign_in.py


class SignInActionError:
    NOT_VALID_AUTH_DATA = 'Неверный логин или пароль'
    ALREADY_AUTH = 'Вы уже авторизованы'